# ssg

./: README.md
builder/: .gitignore  Cargo.toml  tailwind.config.js
builder/includes/templates/: posts.tera
builder/source/: index.tera
builder/source/posts/: Amps and angle encoding.md  Backslash escapes.md  Blockquotes with code blocks.md  Horizontal rules.md  Inline HTML (Simple).md  Inline HTML comments.md  Links, inline style.md  Links, reference style.md  Literal quotes in titles.md  Ordered and unordered lists.md  Tabs.md  Tidyness.md
builder/sources/posts/: Auto links.md  Hard-wrapped paragraphs with list-like lines.md  Inline HTML (Advanced).md  Markdown Example.md  Nested blockquotes.md  Strong and em together.md  _data.toml
builder/sources/public/: licence.txt
builder/sources/styles/: tailwind.css
builder/src/: lib.rs  main.rs
builder/src/markdown/: markdown_loader.rs  markdown_plugin.rs  markdown_transformer.rs  mod.rs
builder/src/pickers/: file_picker.rs
builder/src/pipeline/: builder.rs  log.rs  mod.rs  pipeline_context.rs  runner.rs
builder/src/pipeline/objects/: asset.rs  data.rs  mod.rs  page.rs  transformer_priority.rs
builder/src/pretty_url/: mod.rs  pretty_url_plugin.rs  pretty_url_transformer.rs
builder/src/tailwind/: mod.rs  tailwind_finisher.rs  tailwind_plugin.rs
builder/src/template/: mod.rs  template_plugin.rs  tera_loader.rs  tera_templater.rs
builder/src/traits/: finisher.rs  loader.rs  mod.rs  picker.rs  plugin.rs  templater.rs  transformer.rs
cli/: .gitignore  Cargo.toml
cli/src/: main.rs
